WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100680
[Qt][Win] BitmapTextureGL::updateContents() is broken after
r132019
.
https://bugs.webkit.org/show_bug.cgi?id=100680
Summary
[Qt][Win] BitmapTextureGL::updateContents() is broken after r132019.
Zeno Albisser
Reported
2012-10-29 08:44:07 PDT
[Qt][Win] BitmapTextureGL::updateContents() broken after
r132019
.
Attachments
Patch
(3.69 KB, patch)
2012-10-29 08:51 PDT
,
Zeno Albisser
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zeno Albisser
Comment 1
2012-10-29 08:51:59 PDT
Created
attachment 171253
[details]
Patch
Zeno Albisser
Comment 2
2012-10-30 05:23:50 PDT
Comment on
attachment 171253
[details]
Patch Clearing flags on attachment: 171253 Committed
r132897
: <
http://trac.webkit.org/changeset/132897
>
Zeno Albisser
Comment 3
2012-10-30 05:23:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug