[Qt][Win] BitmapTextureGL::updateContents() broken after r132019. https://bugs.webkit.org/show_bug.cgi?id=100680

When creating a temporary for swizzling the image data,
the temporary will have the target size.
Therefore no offset within the available image data
shall be applied in this case.

Reviewed by Noam Rosenthal.

* platform/graphics/texmap/TextureMapperGL.cpp:
(WebCore::BitmapTextureGL::updateContents):

Canonical link: https://commits.webkit.org/118781@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132897 268f45cc-cd09-0410-ab3c-d52691b4dbfc